Created About component

--- a/frontend/bookworm-ai/src/app/components/navbar/navbar.component.html
+++ b/frontend/bookworm-ai/src/app/components/navbar/navbar.component.html
@@ -26,4 +26,7 @@
     <div class="navbar-item">
         <h2>Chat with AI</h2>
     </div>
+    <div class="navbar-item">
+        <h4>About</h4>
+    </div>
 </div>
