--- a/frontend/bookworm-ai/src/app/components/home/home.component.html
+++ b/frontend/bookworm-ai/src/app/components/home/home.component.html
@@ -1,1 +1,8 @@
 <app-navbar></app-navbar>
+
+<div class="home">
+    <h1>Home Page</h1>
+    <input type="text" [placeholder]="placeholderText" [(ngModel)]="name">
+    <!-- Get color from home.component.ts -->
+    <h3 [style.color]="nameColor">Hello {{name}}</h3>
+</div>
