--- a/frontend/bookworm-ai/src/app/components/navbar/navbar.component.html
+++ b/frontend/bookworm-ai/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,7 @@
         <h3>Top Books</h3>
     </div>
     <div class="navbar-item">
-        <select name="genre">
+        <select name="genre" [value]="genre" [(ngModel)]="genre">
             <option value="">Select Genre</option>
             <option value="Fiction">Fiction</option>
             <option value="Mystery">Mystery</option>
