--- a/frontend/bookworm-ai/src/app/components/home/home.component.html
+++ b/frontend/bookworm-ai/src/app/components/home/home.component.html
@@ -18,6 +18,6 @@
     <br>
     <ul>
         <h3>Book List</h3>
-        <li *ngFor="let book of bookList">{{book}} <button (click)="remove(book)">(-)</button></li>
+        <li *ngFor="let book of bookList">{{book}} <button (click)="remove(book)">❌</button></li>
     </ul>
 </div>
