--- a/frontend/bookworm-ai/src/app/components/navbar/navbar.component.html
+++ b/frontend/bookworm-ai/src/app/components/navbar/navbar.component.html
@@ -30,7 +30,7 @@
         <h3>Blogs</h3>
     </div>
     <div class="navbar-item">
-        <h2>Chat with AI</h2>
+        <h2 routerLink="chat">Chat with AI</h2>
     </div>
     <div class="navbar-item">
         <a routerLink="about">
